[package]
name = "ethernet-echo-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = { version = "0.33.0", features = ["pnet_datalink"]}
hex = "0.4.3"
ethernet_echo_protocol = { path = "../ethernet_echo_protocol" }